padding to prevent image clipping

--- a/styles/index.css
+++ b/styles/index.css
@@ -53,7 +53,7 @@ nav a {
     padding: 0 2rem;
 }
 .graphic-box {
-    padding: 0 0;
+    padding: 0.6rem 0;
     overflow: hidden;
 }
 .graphic-track {
